generated/checkers/refine/KN-Null-Pointer-Dereference-a54a594d-0/build_logs/syntax-repair-refine-0-2/build_stderr_1.log
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In member function ‘void {anonymous}::SAGenTestChecker::checkPreCall(const clang::ento::CallEvent&, clang::ento::CheckerContext&) const’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:518:77: error: cannot convert ‘clang::ento::ProgramStatePartialTrait<llvm::ImmutableMap<const clang::ento::MemRegion*, const clang::StackFrameContext*> >::lookup_type’ {aka ‘const clang::StackFrameContext* const*’} to ‘const clang::StackFrameContext*’ in initialization
  518 |     if (const StackFrameContext *Stored = State->get<SuspiciousAfterLockMap>(MR)) {
      |                                           ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~
      |                                                                             |
      |                                                                             clang::ento::ProgramStatePartialTrait<llvm::ImmutableMap<const clang::ento::MemRegion*, const clang::StackFrameContext*> >::lookup_type {aka const clang::StackFrameContext* const*}
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In member function ‘void {anonymous}::SAGenTestChecker::checkLocation(clang::ento::SVal, bool, const clang::Stmt*, clang::ento::CheckerContext&) const’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:539:75: error: cannot convert ‘clang::ento::ProgramStatePartialTrait<llvm::ImmutableMap<const clang::ento::MemRegion*, const clang::StackFrameContext*> >::lookup_type’ {aka ‘const clang::StackFrameContext* const*’} to ‘const clang::StackFrameContext*’ in initialization
  539 |   if (const StackFrameContext *Stored = State->get<SuspiciousAfterLockMap>(DerefR)) {
      |                                         ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~
      |                                                                           |
      |                                                                           clang::ento::ProgramStatePartialTrait<llvm::ImmutableMap<const clang::ento::MemRegion*, const clang::StackFrameContext*> >::lookup_type {aka const clang::StackFrameContext* const*}
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: At global scope:
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:84:10: warning: ‘const T* {anonymous}::findSpecificTypeInChildren(const clang::Stmt*) [with T = clang::ArraySubscriptExpr]’ used but never defined
   84 | const T* findSpecificTypeInChildren(const Stmt *S);
      |          ^~~~~~~~~~~~~~~~~~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:84:10: warning: ‘const T* {anonymous}::findSpecificTypeInChildren(const clang::Stmt*) [with T = clang::UnaryOperator]’ used but never defined
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:84:10: warning: ‘const T* {anonymous}::findSpecificTypeInChildren(const clang::Stmt*) [with T = clang::MemberExpr]’ used but never defined
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:84:10: warning: ‘const T* {anonymous}::findSpecificTypeInChildren(const clang::Stmt*) [with T = clang::ContinueStmt]’ used but never defined
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:84:10: warning: ‘const T* {anonymous}::findSpecificTypeInChildren(const clang::Stmt*) [with T = clang::BreakStmt]’ used but never defined
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:84:10: warning: ‘const T* {anonymous}::findSpecificTypeInChildren(const clang::Stmt*) [with T = clang::GotoStmt]’ used but never defined
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:84:10: warning: ‘const T* {anonymous}::findSpecificTypeInChildren(const clang::Stmt*) [with T = clang::ReturnStmt]’ used but never defined
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:81:10: warning: ‘const T* {anonymous}::findSpecificTypeInParents(const clang::Stmt*, clang::ento::CheckerContext&) [with T = clang::IfStmt]’ used but never defined
   81 | const T* findSpecificTypeInParents(const Stmt *S, CheckerContext &C);
      |          ^~~~~~~~~~~~~~~~~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:114:6: warning: ‘bool {anonymous}::getStringSize(llvm::APInt&, const clang::Expr*)’ defined but not used [-Wunused-function]
  114 | bool getStringSize(llvm::APInt &StringSize, const Expr *E) {
      |      ^~~~~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:101:6: warning: ‘bool {anonymous}::getArraySizeFromExpr(llvm::APInt&, const clang::Expr*)’ defined but not used [-Wunused-function]
  101 | bool getArraySizeFromExpr(llvm::APInt &ArraySize, const Expr *E) {
      |      ^~~~~~~~~~~~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:95:21: warning: ‘const llvm::APSInt* {anonymous}::inferSymbolMaxVal(clang::ento::SymbolRef, clang::ento::CheckerContext&)’ defined but not used [-Wunused-function]
   95 | const llvm::APSInt *inferSymbolMaxVal(SymbolRef Sym, CheckerContext &C) {
      |                     ^~~~~~~~~~~~~~~~~
make[3]: *** [tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/build.make:76: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/SAGenTestChecker.cpp.o] Error 1
make[2]: *** [CMakeFiles/Makefile2:29772: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/all] Error 2
make[1]: *** [CMakeFiles/Makefile2:29779: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/rule] Error 2
make: *** [Makefile:7495: SAGenTestPlugin] Error 2
